End-to-End-DevSecOps/Kubernetes-Manifests-file/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  namespace: three-tier
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "true"  # Redirect HTTP to HTTPS
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:637423300080:certificate/d9fb1a7f-dad2-481d-8bf4-0c7a0c418656
spec:
  ingressClassName: alb
  rules:
    - host: shresthaanamika.com.np
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3500
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: api
                port:
                  number: 3500
          - path: /ready
            pathType: Exact
            backend:
              service:
                name: api
                port:
                  number: 3500
          - path: /started
            pathType: Exact
            backend:
              service:
                name: api
                port:
                  number: 3500
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
  tls:
  - hosts:
    - "shresthaanamika.com.np"
    secretName: my-tls-secret  # You can leave this as-is if using ACM certificate directly or if creating a Kubernetes secret for custom certs
